# hexapawn

./: README.md  Readme.md  pyproject.toml  readme.md  uv_guide.md
Notebooks/: test_em.ipynb
notebooks/: 01_qlearning_hexapawn.ipynb  test_FEPC.ipynb  test_JARB.ipynb  test_JEGS.ipynb  test_JSLA.py  test_em.ipynb
src/: agente.py  ambiente.py  simulations.py
src/hexapawn/: __init__.py  actions.py  agent.py  cli.py  environment.py  reward.py  run.py  state.py  training.py
