[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexapawn"
version = "0.1.0"
description = "A simple Hexapawn engine and experiments."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

dependencies = [
    "PyYAML>=6.0",
    "tqdm==4.67.1",
    "pandas>=1.3.0",
]

[project.scripts]
hexapawn = "hexapawn.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexapawn"]